--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name" : "website-using-express",
-  "version" : "0.0.1",
-  "scripts" : {
-    "start" : "node Server.js"
+  "name": "website-using-express",
+  "version": "0.0.1",
+  "scripts": {
+    "start": "node Server.js",
+    "build-css": "node-sass --include-path scss scss/main.scss   public/css/main.css",
+      "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
-  "dependencies" : {
-    "express" : "latest"
+  "dependencies": {
+    "express": "latest"
+  },
+  "devDependencies": {
+    "node-sass": "^4.5.2",
+    "nodemon": "^1.11.0"
   }
 }
